Web APIs In JavaScript

--- a/API-Web-APIs-In-JS.html
+++ b/API-Web-APIs-In-JS.html
@@ -45,6 +45,37 @@
             <p id="p4"></p>
             <p id="p5"></p>
         </div>
+        <br><hr>
+
+
+        <div>
+            <h3>Web Werkers API</h3>
+            <p>Count Numbers : <output id="ans"></output></p>
+
+            <button id="btn5a">Start Worker</button>
+            <button id="btn5b">Stop Worker</button>
+        </div>
+        <br><hr>
+
+
+        <div>
+            <h3>Fatch API</h3>
+            
+            <p id="cat">Fatch Link To Fact About Cat</p>
+
+            <p id="catFact2">Cat Fact Using Async And Await Function</p>
+        </div>
+        <br><hr>
+
+        <div>
+            <h3>GeoLocation API</h3>
+            <button id="getLoc">Get Your Location</button>
+            <p id="locate">GeoLocation</p>
+        </div>
+        <br>
+        
+        <hr><hr>
+        <br><br>    
 
         <script src="API-Web-APIs-In-JS.js"></script>
     </body>
